# Autonomus-knowledge-worker-

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_functions.py
src/agents/: __init__.py  analyst.py  base_agent.py  research_agent.py  supervisor_agent.py  web_resercher.py  writer.py
src/confrig/: llm_confrig.py  settings.py
src/rag/: __init__.py  chunk_processor.py  document_loader.py  embedding.py  retriever.py  vector_store.py
src/tools/: Base_tool.py  __init__.py  citation_formatter.py  code_executor.py  document_processor.py  pdf_reader.py  web_serch.py
src/workflow/: __init__.py  agent_orchestrator.py  execution_manager.py  task_decomposer.py  workflow_builder.py
