[build-system]

requires= ["setuptools>=61.0","wheels"]
build-backend="setuptools.build_meta"

[project]
name="autonomous-knowledge-agent"
version="1.0.0"
description= "AutoGen 0.71 based Autonomous Knowledge-Worker Agent with RAG capabilities"
author= [
    {
        name="Prathamesh Upreti ",
        email= "prathameshupreti408@gmail.com"
    }
]
readme= "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["autogen", "ai", "rag", "autonomous-agent", "knowledge-worker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "autogen[autogen]>=0.71",
    "openai>=1.0.0",
    "chromadb>=0.4.24",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
web = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.2",
    "newspaper3k>=0.2.8",
]

analysis = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
]

monitoring = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "prometheus-client>=0.19.0",
]